--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
     "api"
   ],
   "author": "Luiz Silva",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.7",
+    "sucrase": "^3.31.0"
+  }
 }
