--- a/package.json
+++ b/package.json
@@ -1,20 +1,11 @@
 {
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "moment": "^2.29.4",
-    "mysql2": "^3.2.0",
-    "nodemon": "^2.0.22",
-    "sequelize": "^6.30.0"
-  },
   "name": "faciliptv",
   "version": "1.0.0",
   "description": "Back de integração",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "start:dev": "nodemon server.js"
   },
   "keywords": [
     "nodejs",
@@ -26,6 +17,16 @@
   ],
   "author": "Luiz Silva",
   "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "mysql2": "^3.2.0",
+    "nodemon": "^2.0.22",
+    "require-directory": "^2.1.1",
+    "sequelize": "^6.30.0"
+  },
   "devDependencies": {
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
