--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "mysql2": "^3.2.0",
     "nodemon": "^2.0.22",
     "require-directory": "^2.1.1",
-    "sequelize": "^6.30.0"
+    "sequelize": "^6.30.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "eslint": "^8.37.0",
