--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment-timezone": "^0.5.43",
     "mysql2": "^3.2.0",
     "nodemon": "^2.0.22",
+    "puppeteer": "^19.10.1",
     "require-directory": "^2.1.1",
     "sequelize": "^6.30.0",
     "winston": "^3.8.2"
